[gd_scene load_steps=7 format=3 uid="uid://c5guqm1eybxig"]

[ext_resource type="Script" uid="uid://bib61604nsbtk" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Texture2D" uid="uid://dj3f6n68t587x" path="res://Components/Resistor/resistor.png" id="2_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dlp8dpyy38cpp" path="res://Components/Capacitor/capacitor.png" id="3_lquwl"]
[ext_resource type="Texture2D" uid="uid://j4626myjd2u7" path="res://Components/Inductor/inductor.png" id="4_7mycd"]
[ext_resource type="Texture2D" uid="uid://bans8qfumlg7f" path="res://Components/Voltage Source/voltage source.png" id="5_lquwl"]
[ext_resource type="Script" uid="uid://dqqaaseor1laa" path="res://connection_graph.gd" id="6_7mycd"]

[node name="main" type="Node2D"]
script = ExtResource("1_0xm2m")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 130.0
offset_bottom = 276.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button Resistor" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
icon = ExtResource("2_1bvp3")
icon_alignment = 1
expand_icon = true

[node name="Button Capacitor" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
icon = ExtResource("3_lquwl")
icon_alignment = 1
expand_icon = true

[node name="Button Voltage Source" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
icon = ExtResource("5_lquwl")
icon_alignment = 1
expand_icon = true

[node name="Button Wire" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
icon_alignment = 1
expand_icon = true

[node name="Button Inductor" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
icon = ExtResource("4_7mycd")
icon_alignment = 1
expand_icon = true

[node name="WireMode" type="Node2D" parent="."]

[node name="Graph" type="Node2D" parent="."]

[node name="ConnectionGraph" type="Node" parent="."]
script = ExtResource("6_7mycd")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Resistor" to="." method="_on_button_resistor_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Voltage Source" to="." method="_on_button_voltage_source_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button Wire" to="." method="_on_button_wire_pressed"]
[connection signal="child_entered_tree" from="Graph" to="." method="_on_graph_child_entered_tree"]
[connection signal="child_entered_tree" from="Graph" to="Graph" method="_on_child_entered_tree"]
